creazione del fragment di scelta generi post registrazione + fix login e registrazione + mettere l'immagine nei setting + creazioen fragment della scelta delli'immagine profilo + passare l'immagine da un fragment all'altro

--- a/app/src/main/res/layout/fragment_continue_registration.xml
+++ b/app/src/main/res/layout/fragment_continue_registration.xml
@@ -2,22 +2,23 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="?attr/backgroundColor"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
+    android:backgroundTint="?attr/backgroundColor"
     android:layout_height="match_parent">
-
-
     <TextView
         android:id="@+id/textview_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Continua la tua registrazione"
+        android:text="Continua la registrazione"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -37,7 +38,7 @@
         android:id="@+id/text_input_layout_choose_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,106 +57,197 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textview_choose_genre"
+        android:id="@+id/textview_gender_selection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
-        android:text="Scegli i generi dei libri che ti potrebbero interessare (Almeno 1)"
+        android:text="Scegli la tua identità di genere"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_choose_username" />
 
-    <CheckBox
-        android:id="@+id/genre1"
+    <Spinner
+        android:id="@+id/spinner_gender"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="240dp"
+        android:padding="13dp"
+        android:background="@drawable/custom_textbox_bl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textview_gender_selection"
+        app:layout_constraintTop_toBottomOf="@+id/textview_gender_selection" />
+
+    <TextView
+        android:id="@+id/textview_choose_genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fantasy"
-        android:buttonTint="@color/login_blue"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:text="Scegli i generi dei libri che ti potrebbero interessare"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_choose_genre" />
-    <CheckBox
-        android:id="@+id/genre2"
-        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipgroup_genre_filter"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Storie d'amore"
-        android:buttonTint="@color/login_blue"
+        android:layout_marginHorizontal="16dp"
+        app:chipSpacingVertical="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre1" />
-    <CheckBox
-        android:id="@+id/genre3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Thriller"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre2" />
-    <CheckBox
-        android:id="@+id/genre4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Horror"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre3" />
-    <CheckBox
-        android:id="@+id/genre5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cucina"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre4" />
-    <CheckBox
-        android:id="@+id/genre6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Storia"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre5" />
-    <CheckBox
-        android:id="@+id/genre7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Psicologia"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre6" />
-    <CheckBox
-        android:id="@+id/genre8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Storie d'amore"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre7" />
-    <CheckBox
-        android:id="@+id/genre9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sci-Fi"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre8" />
-    <CheckBox
-        android:id="@+id/genre10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Salute Mentale"
-        android:buttonTint="@color/login_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre9" />
+        app:layout_constraintTop_toBottomOf="@id/textview_choose_genre"
+        app:selectionRequired="false"
+        app:singleSelection="false">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_fantasy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            style="@style/Widget.Material3.Chip.Filter"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            android:text="Fantasy"
+            />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_love_stories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Storie d'amore"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_thriller"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            style="@style/Widget.Material3.Chip.Filter"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            android:text="Thriller"
+            />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_horror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Horror"
+            />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_cooking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Cucina"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Storia"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_psychology"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Psicologia"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_scifi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Sci-Fi"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_mental_health"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Salute Mentale"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_classic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Classici"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_humor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Comici"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_comedy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Commedie"
+            />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_childrens"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Per Bambini"
+            />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_genre_contemporary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@color/bg_chip_state_list"
+            style="@style/Widget.Material3.Chip.Filter"
+            android:text="Contemporanei"
+            />
+
+
+    </com.google.android.material.chip.ChipGroup>
     <Button
         android:id="@+id/confirm_preferences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Conferma le mie preferenze"
-        android:backgroundTint="@color/login_blue"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="?attr/colorPrimaryVariant"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genre10">
+        app:layout_constraintTop_toBottomOf="@+id/chipgroup_genre_filter">
     </Button>
 
 
