--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -38,45 +38,6 @@
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textview_register"
-        app:endIconMode="clear_text"
-        app:errorTextColor="@color/white"
-        app:errorIconTint="@color/white"
-        android:textColorHint="@color/white"
-        app:errorEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_input_edit_text_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custom_textbox"
-            android:drawableStart="@drawable/ic_baseline_profile_24"
-            android:drawableTint="@color/white"
-            android:drawablePadding="20dp"
-            android:textColor="@color/white"
-            android:hint="@string/username"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <Spinner
-        android:id="@+id/spinner_gender"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="240dp"
-        android:padding="13dp"
-        android:background="@drawable/custom_textbox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/text_input_layout_username"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
@@ -85,7 +46,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
+        app:layout_constraintTop_toBottomOf="@+id/textview_register"
         app:endIconMode="clear_text"
         app:errorTextColor="@color/white"
         app:errorIconTint="@color/white"
@@ -166,7 +127,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/login_blue"
+        android:backgroundTint="?attr/colorPrimaryVariant"
         android:text="@string/register"
         android:textColor="@color/white"
         android:textSize="14sp"
