--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,13 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:backgroundTint="?attr/backgroundColor"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="100dp">
+    
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
     <TextView
         android:id="@+id/textview_edit_profile"
         android:layout_width="wrap_content"
@@ -24,6 +27,17 @@
 />
 
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image_select"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="28dp"
+        android:clickable="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_edit_profile"
+        />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_username"
         android:layout_width="match_parent"
@@ -31,7 +45,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textview_edit_profile"
+        app:layout_constraintTop_toBottomOf="@+id/profile_image_select"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
