--- a/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
@@ -7,7 +7,6 @@
     android:layout_height="wrap_content"
     >
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet_add_to_collection_parent"
         android:layout_width="match_parent"
@@ -96,8 +95,8 @@
             >
 
             <TextView
-                android:id="@+id/collection_name_placeholder"
-                android:layout_width="match_parent"
+                android:id="@+id/collection_name_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textview_collection_name_placeholder"
                 android:textSize="20sp"
@@ -142,7 +141,7 @@
                 android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="12"
+                tools:text="15"
                 />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -155,7 +154,7 @@
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/collection_name_placeholder">
+                app:layout_constraintTop_toBottomOf="@id/collection_name_title">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edit_text_create_collection"
