--- a/app/src/main/res/layout/bottom_sheet_collection_creation.xml
+++ b/app/src/main/res/layout/bottom_sheet_collection_creation.xml
@@ -3,6 +3,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +15,7 @@
         android:paddingBottom="10dp">
 
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
-            android:id="@+id/bottomsheet_firstElement"
+            android:id="@+id/bottomsheet_handle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -22,50 +23,82 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textview_section_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Collection"
+            android:text="@string/create_new_collection"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bottomsheet_firstElement" />
+            app:layout_constraintTop_toBottomOf="@id/bottomsheet_handle" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/dialog_collection_name_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="@string/textview_collection_name_placeholder"
             android:textSize="20sp"
             android:layout_marginTop="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@id/textview_section_title" />
 
         <TextView
+            android:id="@+id/character_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0/12"
             android:textColor="@color/google_login_text"
             android:textSize="20sp"
             android:layout_marginVertical="5dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/textview_section_title"
+            app:layout_constraintEnd_toStartOf="@id/character_separator"
+            tools:text="0"
+            />
+
+        <TextView
+            android:id="@+id/character_separator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/slash"
+            android:textColor="@color/google_login_text"
+            android:textSize="20sp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toStartOf="@id/character_limit"
+            app:layout_constraintTop_toBottomOf="@id/textview_section_title"
+            />
+
+
+        <TextView
+            android:id="@+id/character_limit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/google_login_text"
+            android:textSize="20sp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@id/textview_section_title"
+            tools:text="15"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textinputlayout_collectionName"
+            android:id="@+id/create_text_input_layout_add_collection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="type the name of the collection"
+            android:hint="@string/textview_hint_insert_collection_name"
+            android:layout_marginTop="6dp"
             app:endIconMode="clear_text"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            app:layout_constraintTop_toBottomOf="@id/dialog_collection_name_title">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/CollectionCreationName"
+                android:id="@+id/edit_text_collection_creation_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:imeOptions=""
+                android:imeOptions="actionDone"
                 android:inputType="text"
                 android:lines="1"
                 android:padding="5dp" />
@@ -73,52 +106,52 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/materialDivider1"
+            android:id="@+id/material_divider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="15dp"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_collectionName" />
+            app:layout_constraintTop_toBottomOf="@id/create_text_input_layout_add_collection" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textview_visibility_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Make public"
+            android:text="@string/textview_make_collection_public"
             android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/materialDivider1"
+            app:layout_constraintTop_toBottomOf="@id/material_divider"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/CollectionCreationVisibility"
+            android:id="@+id/switch_collection_visibility"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/materialDivider1"
+            app:layout_constraintTop_toBottomOf="@id/material_divider"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textview_visibility_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Collections made public will be shown on your profile and can be shared with friends"
+            android:text="@string/textview_visibility_description"
             android:textSize="16sp"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@id/textview_visibility_title"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <Button
-            android:id="@+id/CollectionCreationConfirm"
-            android:layout_width="300dp"
+            android:id="@+id/button_collection_creation_confirm"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Next"
+            android:layout_marginHorizontal="60dp"
+            android:text="@string/button_add_collection"
             android:textColor="@color/white"
             android:backgroundTint="@color/login_blue"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@id/textview_visibility_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
