--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,11 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="?attr/backgroundColor"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="100dp">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/textview_edit_profile"
         android:layout_width="wrap_content"
@@ -43,6 +44,16 @@
             android:drawablePadding="20dp"
             android:hint="@string/username"
             android:inputType="text" />
+
+        <TextView
+            android:id="@+id/settings_username_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:textSize="20sp"
+            android:visibility="gone"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -143,7 +154,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_confirm_edit" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
