--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -94,7 +94,7 @@
 
             </LinearLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/follow_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,9 +106,27 @@
                 app:icon="@drawable/person_add_black_24dp"
                 android:layout_marginTop="14dp"
                 android:text="@string/follow_button_string"
-                style="@style/Widget.MaterialComponents.Button"
+                android:visibility="gone"
+                app:strokeWidth="1dp"
+                tools:visibility="visible"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 />
 
+            <Button
+                android:id="@+id/unfollow_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintTop_toBottomOf="@id/follower_counter_container"
+                app:layout_constraintStart_toEndOf="@id/avatar_image_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:icon="@drawable/person_remove_black_24dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/unfollow_button_string"
+                android:visibility="gone"
+                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+                />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
