--- a/app/src/main/res/layout/bottom_sheet_search_books_filter.xml
+++ b/app/src/main/res/layout/bottom_sheet_search_books_filter.xml
@@ -7,7 +7,6 @@
     android:id="@+id/bottom_sheet_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,12 +64,12 @@
                 app:singleSelection="true">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_alphabetical_sort"
+                    android:id="@+id/chip_title_sort"
                     style="@style/Widget.Material3.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:text="@string/textview_alphabetical_order_label"
+                    android:text="@string/textview_title_order_label"
                     app:chipBackgroundColor="@color/bg_chip_state_list"
                     tools:checked="true" />
 
