Added different management for other users profiles

--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -107,6 +107,9 @@
                 android:layout_marginTop="14dp"
                 android:text="@string/follow_button_string"
                 android:visibility="gone"
+                android:textColor="?attr/colorOnBackground"
+                app:strokeColor="?attr/colorOnBackground"
+                app:iconTint="?attr/colorOnBackground"
                 app:strokeWidth="1dp"
                 tools:visibility="visible"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
