--- a/app/src/main/res/menu/profile_appbar_menu.xml
+++ b/app/src/main/res/menu/profile_appbar_menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- "Mark Favorite", must appear as action button if possible. -->
     <item
         android:id="@+id/action_notifications"
-        android:icon="@drawable/ic_heart"
+        android:icon="@drawable/baseline_notifications_24"
         android:title="@string/notifications_button"
         app:showAsAction="ifRoom"/>
 
