--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -76,7 +76,9 @@
         <action
             android:id="@+id/action_profileFragment_to_followListFragment"
             app:destination="@id/followListFragment" />
-
+        <action
+            android:id="@+id/action_profileFragment_to_notificationsFragment"
+            app:destination="@id/notificationsFragment" />
     </fragment>
 
     <fragment
@@ -233,12 +235,26 @@
         <action
             android:id="@+id/action_followListFragment_to_userDetailsFragment"
             app:destination="@id/userDetailsFragment" />
-
-
     </fragment>
 
+    <fragment
+        android:id="@+id/notificationsFragment"
+        android:name="it.unimib.readify.ui.main.NotificationsFragment"
+        tools:layout="@layout/fragment_notifications">
+        <action
+            android:id="@+id/action_NotificationsFragment_to_NotificationPageFragment"
+            app:destination="@id/notificationsPageFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/notificationsPageFragment"
+        android:name="it.unimib.readify.ui.main.NotificationsPageFragment"
+        tools:layout="@layout/fragment_notifications_page">
+        <argument
+            android:name="content"
+            app:argType="integer" />
+    </fragment>
 
     <include app:graph="@navigation/login_navigation_graph" />
-
 
 </navigation>
