--- a/app/src/main/res/menu/profile_appbar_menu.xml
+++ b/app/src/main/res/menu/profile_appbar_menu.xml
@@ -6,15 +6,15 @@
     <!-- "Mark Favorite", must appear as action button if possible. -->
     <item
         android:id="@+id/action_notifications"
-        android:icon="@drawable/baseline_notifications_24"
+        android:icon="@drawable/baseline_notifications_32"
         android:title="@string/notifications_button"
+        app:actionLayout="@layout/notifications_profile_appbar_menu"
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, must always be in the overflow. -->
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_baseline_menu"
+        android:icon="@drawable/ic_baseline_menu_32"
         android:title="@string/settings_button_profile"
         app:showAsAction="ifRoom"/>
-
 </menu>
