--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings"
-            android:title="Modify profile"/>
+            android:title="Settings"/>
         <item
             android:id="@+id/nav_visibility"
             android:icon="@drawable/ic_baseline_lock_open_24"
