--- a/app/src/main/res/menu/collection_appbar_menu.xml
+++ b/app/src/main/res/menu/collection_appbar_menu.xml
@@ -4,12 +4,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <!-- "Mark Favorite", must appear as action button if possible. -->
+    <item
+        android:id="@+id/action_delete_collection"
+        android:icon="@drawable/baseline_delete_24"
+        android:title="@string/delete_collection_action"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_collection_settings"
         android:icon="@drawable/ic_baseline_settings"
         android:title="@string/collection_settings_button"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" >
+        <menu>
+            <item
+                android:id="@+id/action_rename_collection"
+                android:title="@string/rename_collection_action"
+                android:icon="@drawable/baseline_edit_24" />
+        </menu>
+    </item>
 
 
 </menu>
