--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/collection_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -17,7 +18,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/content_description_collection_thumbnail"
+        tools:src="@drawable/image_not_available"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/collection_name_visibility_constraintLayout"
@@ -26,7 +30,7 @@
         android:paddingEnd="15dp"
         android:paddingTop="2dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/collection_thumbnail_imageview"
+        app:layout_constraintTop_toBottomOf="@id/collection_thumbnail_imageview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -36,14 +40,19 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/textview_collection_name_placeholder"
+            />
 
         <ImageView
             android:id="@+id/collection_visibility_icon"
             android:layout_width="30sp"
             android:layout_height="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/content_description_collection_visibility"
+            tools:src="@drawable/baseline_lock_outline_24"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
