--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -13,31 +13,38 @@
         android:padding="15dp">
 
         <TextView
-            android:id="@+id/collectionFragment_collectionName"
+            android:id="@+id/collection_fragment_collection_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/textview_collection_name_placeholder"
+            />
 
         <ImageView
-            android:id="@+id/collectionFragment_collectionVisibility"
+            android:id="@+id/collection_fragment_collection_visibility"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="5dp"
             android:layout_marginStart="10dp"
-            app:layout_constraintStart_toEndOf="@+id/collectionFragment_collectionName"
-            app:layout_constraintTop_toTopOf="@+id/collectionFragment_collectionName" />
+            app:layout_constraintStart_toEndOf="@id/collection_fragment_collection_name"
+            app:layout_constraintTop_toTopOf="@id/collection_fragment_collection_name"
+            android:contentDescription="@string/content_description_collection_visibility"
+            tools:src="@drawable/baseline_lock_outline_24"
+            />
 
         <TextView
-            android:id="@+id/collectionFragment_booksNumber"
+            android:id="@+id/collection_fragment_number_of_books"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textColor="@color/google_login_text"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/collectionFragment_collectionName" />
+            app:layout_constraintTop_toBottomOf="@id/collection_fragment_collection_name"
+            tools:text="45"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/collectionFragment_booksRecyclerView"
@@ -45,9 +52,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/collectionFragment_booksNumber" />
+            app:layout_constraintTop_toBottomOf="@id/collection_fragment_number_of_books"
+            tools:itemCount="6"
+            tools:listitem="@layout/book_collection_item"
+            tools:visibility="visible"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
