--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,9 @@
 
     </style>
 
+    <style name="RatingBar" parent="Theme.Material3.DayNight">
+        <item name="colorControlNormal">@color/grey_button</item>
+        <item name="colorControlActivated">@color/rating_yellow</item>
+    </style>
+
 </resources>
