--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,11 @@
 
     </style>
 
+    <style name="RatingBar" parent="Theme.Material3.DayNight">
+        <item name="colorControlNormal">@color/grey_button</item>
+        <item name="colorControlActivated">@color/rating_yellow</item>
+    </style>
+
 </resources>
 
 
